[dependencies]
smt_core = { path = "../smt_core" }
smt_io_adapters = { path = "../smt_io_adapters" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rust_decimal = "1"
rust_decimal_macros = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
core_affinity = "0.8"  # Corrected name with underscore